
	* pykickstart/commands/logvol.py, pykickstart/commands/network.py,
	pykickstart/commands/partition.py, pykickstart/commands/raid.py,
	pykickstart/commands/repo.py, pykickstart/commands/user.py,
	pykickstart/commands/volgroup.py, pykickstart/commands/zfcp.py:  Get
	rid of a special function to set the data object since we can already
	get at that in the parser from the handler reference.

2007-10-30  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/*:  Make the OptionParser instance an attribute
	of each class so we can extract more information out of the commands
	dict.

	* pykickstart/commands/monitor.py, pykickstart/commands/network.py,
	pykickstart/commands/rootpw.py, pykickstart/commands/timezone.py,
	pykickstart/commands/vnc.py, pykickstart/commands/xconfig.py:
	Remove redundant parse methods.

	* pykickstart/commands/network.py, pykickstart/commands/repo.py,
	pykickstart/commands/user.py, pykickstart/commands/volgroup.py,
	pykickstart/commands/zfcp.py:  Use the the setClassData method in more
	places as it simplifies the code.

2007-10-30  Chris Lumens  <clumens@redhat.com>

	* Makefile:  Docs have moved on the wiki.

	* pykickstart/options.py (KsOptionParser.check_values):  Move the test
	for deprecated options to the end so removed options will cause an
	error.  Also fix the error messages to make a bit more sense.

	* pykickstart/parser.py (KickstartParser.handlePackageHdr):
	--ignoredeps and --resolvedeps have now been removed.

	* pykickstart/commands/firewall.py (F9_Firewall):  --high and --medium
	have now been removed.

	* pykickstart/commands/vnc.py (F9_Vnc):  --connect has now been
	removed.

	* pykickstart/commands/xconfig (F9_XConfig):  All the options that
	were moved to the monitor command have now been removed.

	* pykickstart/commands/logvol.py (F9_LogVol):  Mark the
	--bytes-per-inode option as deprecated, rather than removing it
	completely.
	* pykickstart/commands/partition.py (F9_Partition):  Likewise.